@@ -868,6 +868,7 @@ dvipdf
 dvips
 g++
 g77
+gs
 icc
 ifl
 ilink
@@ -2137,6 +2138,9 @@ The TeX DVI file to PDF file converter.
 .IP DVIPDFFLAGS
 General options passed to the TeX DVI file to PDF file converter.
 
+.IP DVIPDFCOM
+The command line used to convert TeX DVI files into a PDF file.
+
 .IP DVIPS
 The TeX DVI file to PostScript converter.
 
@@ -2265,6 +2269,16 @@ are included on this command line.
 .IP File
 A function that converts a file name into a File instance relative to the
 target being built. 
+
+.IP GS
+The Ghostscript program used to convert PostScript to PDF files.
+
+.IP GSFLAGS
+General options passed to the Ghostscript program
+when converting PostScript to PDF files.
+
+.IP GSCOM
+The Ghostscript command line used to convert PostScript to PDF files.
 
 .IP INCPREFIX
 The prefix used to specify an include directory on the C compiler command
@@ -2550,7 +2564,7 @@ env['PDB'] = 'hello.pdb'
 .EE
 
 .IP PDFCOM
-The command line used to convert TeX DVI files into a PDF file.
+A deprecated synonym for $DVIPDFCOM.
 
 .IP PDFPREFIX
 The prefix used for PDF file names.
